made cart fixes, was causing the cards to collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,8 @@
 .white-text {
   color: white !important;
 }
+
+.navbar{
+  display: block !important;
+}
+
